--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <body class="bg-gray-50">
     <!-- Navbar -->
-    <nav class="bg-white shadow-lg sticky top-0 z-50">
+    <nav class="bg-green-200 shadow-lg sticky top-0 z-50">
       <div class="container mx-auto px-4">
         <div class="flex justify-between items-center py-4">
           <div class="flex items-center space-x-3">
@@ -105,7 +105,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <section id="beranda" class="hero-bg text-white py-20">
+    <section id="beranda" class="hero-bg text-white py-20 bg-[url('src/img/pexels.jpg')] bg-cover bg-center">
       <div class="container mx-auto px-4 text-center">
         <div class="max-w-4xl mx-auto">
           <h2 class="text-5xl font-bold mb-6 animate-bounce-slow">
@@ -125,9 +125,7 @@
             naungan Desa Cukilan, Kecamatan Suruh, Kabupaten Semarang. Dusun ini
             dikenal aktif dalam berbagai kegiatan sosial dan budaya yang menjadi
             bagian penting dalam kehidupan warganya. Salah satu acara terbesar
-            yang rutin diselenggarakan adalah tradisi Saparan, sebuah perayaan
-            yang menjadi momen berkumpulnya warga serta simbol syukur dan
-            kebersamaan. Selain itu, warga Dusun Krajan 2 juga rutin
+            yang rutin diselenggarakan adalah tradisi Saparan, tradisi yang diadakan setiap bulan Sapar sebagai bentuk syukur dan permohonan keselamatan yang tidak hanya diikuti oleh masyarakat sekitar, tetapi juga diikuti oleh masyarakat dari berbagai daerah. Selain itu, warga Dusun Krajan 2 juga rutin
             melaksanakan kerja bakti dan memperingati Hari Kemerdekaan Indonesia
             setiap tanggal 17 Agustus dengan semangat gotong royong yang tinggi.
             Yang menjadi ciri khas dan kebanggaan dari dusun ini adalah produksi
