--- a/index.html
+++ b/index.html
@@ -219,6 +219,9 @@
                 <h4 class="font-bold text-green-600 text-xl mb-2">
                   Ukuran Kecil
                 </h4>
+                 <img src="src/img/besekkecil.jpg" alt="Dokumentasi 3"
+                        class="w-full object-cover rounded-xl mb-4"  style="height: 400px;">
+              </img>
                 <p class="text-gray-600">15 × 5 × 3 cm</p>
                 <p class="text-sm text-gray-500 mt-2">
                   Kapasitas: 3 ekor pindang
@@ -228,15 +231,21 @@
                 <h4 class="font-bold text-green-600 text-xl mb-2">
                   Ukuran Sedang
                 </h4>
-                <p class="text-gray-600">16 × 6 × 3 cm</p>
-                <p class="text-sm text-gray-500 mt-2">
-                  Kapasitas: 4-5 ekor pindang
-                </p>
-              </div>
-              <div class="bg-white p-6 rounded-xl shadow-md">
-                <h4 class="font-bold text-green-600 text-xl mb-2">
-                  Ukuran Besar
-                </h4>
+                 <img src="src/img/beseksedang.jpg" alt="Dokumentasi 3"
+                        class="w-full object-cover rounded-xl mb-4"  style="height: 400px;">
+              </img>
+              <p class="text-gray-600">16 × 6,5 × 3 cm</p>
+              <p class="text-sm text-gray-500 mt-2">
+                Kapasitas: 4-5 ekor pindang
+              </p>
+            </div>
+            <div class="bg-white p-6 rounded-xl shadow-md">
+              <h4 class="font-bold text-green-600 text-xl mb-2">
+                Ukuran Besar
+              </h4>
+              <img src="src/img/besekbesar.webp" alt="Dokumentasi 3"
+                     class="w-full object-cover rounded-xl mb-4"  style="height: 400px;">
+           </img>
                 <p class="text-gray-600">21 × 9 × 3 cm</p>
                 <p class="text-sm text-gray-500 mt-2">
                   Kapasitas: 6-8 ekor pindang
